<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Activities.SignupActivity">

    <com.example.b00682737.maryportholidaypark.design.ResizableImageView
        android:id="@+id/btnBack"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/selector_backbtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.017" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding5"
        android:layout_marginLeft="@dimen/padding5"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/padding5"
        android:layout_marginRight="@dimen/padding5"
        android:layout_marginBottom="8dp"
        android:fillViewport="true"
        android:gravity="center"
        android:orientation="vertical"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBack"
        app:layout_constraintVertical_bias="0.896">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <com.example.b00682737.maryportholidaypark.design.ResizableImageView
                android:id="@+id/resizableImageView"
                android:layout_width="120dp"
                android:layout_height="88dp"
                android:src="@drawable/delta0" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding3"
                android:textColorHint="#80ffffff">

                <com.example.b00682737.maryportholidaypark.design.OpenSansEditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:hint="@string/title_name"
                    android:imeOptions="actionNext"
                    android:inputType="text|textPersonName"
                    android:maxLines="1"
                    android:textColor="@android:color/white"
                    android:textColorHint="#80ffffff"
                    android:textSize="@dimen/font_4" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding1"
                android:textColorHint="#80ffffff">

                <com.example.b00682737.maryportholidaypark.design.OpenSansEditText
                    android:id="@+id/etUserEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:hint="@string/title_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="@android:color/white"
                    android:textColorHint="#80ffffff"
                    android:textSize="@dimen/font_4" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding1"
                android:textColorHint="#80ffffff">

                <com.example.b00682737.maryportholidaypark.design.OpenSansEditText
                    android:id="@+id/etUserPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:hint="@string/title_phone"
                    android:imeOptions="actionNext"
                    android:inputType="textPhonetic"
                    android:maxLines="1"
                    android:textColor="@android:color/white"
                    android:textColorHint="#80ffffff"
                    android:textSize="@dimen/font_4" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding1"
                android:textColorHint="#80ffffff">

                <com.example.b00682737.maryportholidaypark.design.OpenSansEditText
                    android:id="@+id/etUserAddr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:hint="@string/title_address"
                    android:imeOptions="actionNext"
                    android:inputType="textPostalAddress"
                    android:maxLines="1"
                    android:textColor="@android:color/white"
                    android:textColorHint="#80ffffff"
                    android:textSize="@dimen/font_4" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding1"
                android:textColorHint="#80ffffff">

                <com.example.b00682737.maryportholidaypark.design.OpenSansEditText
                    android:id="@+id/etUserPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:hint="@string/title_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@android:color/white"
                    android:textColorHint="#80ffffff"
                    android:textSize="@dimen/font_4" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding1"
                android:textColorHint="#80ffffff">

                <com.example.b00682737.maryportholidaypark.design.OpenSansEditText
                    android:id="@+id/edtConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:hint="@string/title_password_confirm"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@android:color/white"
                    android:textColorHint="#80ffffff"
                    android:textSize="@dimen/font_4" />
            </android.support.design.widget.TextInputLayout>

            <com.example.b00682737.maryportholidaypark.design.OpenSansButton
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding4"
                android:layout_marginBottom="@dimen/padding5"
                android:background="@drawable/selector_whiteround"
                android:text="@string/title_signup"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/font_4" />

            <com.example.b00682737.maryportholidaypark.design.OpenSansTextView
                android:id="@+id/tvUserLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_signin_hint"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_5" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>